--- a/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
+++ b/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
@@ -59,7 +59,7 @@
             android:id="@+id/textView22"
             android:layout_width="401dp"
             android:layout_height="57dp"
-            android:gravity="center_vertical"
+            android:gravity="center|center_vertical"
             android:paddingHorizontal="200px"
             android:scaleX="1.4"
             android:scaleY="1.4"
