--- a/MyApplication/app/src/main/res/layout/activity_formulas.xml
+++ b/MyApplication/app/src/main/res/layout/activity_formulas.xml
@@ -6,4 +6,171 @@
     android:layout_height="match_parent"
     tools:context=".Formulas">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="19dp"
+                    android:layout_height="112dp"
+                    android:layout_weight="1"
+                    android:contentDescription="boton de regreso"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="155dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:scaleX="1.8"
+                    android:scaleY="1.8"
+                    android:text="Formulas" />
+
+                <ImageButton
+                    android:id="@+id/imageButton2"
+                    android:layout_width="35dp"
+                    android:layout_height="116dp"
+                    android:layout_weight="1"
+                    android:contentDescription="Boton logo"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="35dp" />
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* F.M en Carga:" />
+
+            <ImageView
+                android:id="@+id/imageView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="26dp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* F.M en Corriente::" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* Ley Biot-Savart::" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* Ley Ampere:" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* Flujo magnético:" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center|center_vertical"
+                android:paddingHorizontal="200px"
+                android:scaleX="1.4"
+                android:scaleY="1.4"
+                android:text="* Helm-Holtz:" />
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="22dp" />
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
