--- a/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
+++ b/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
@@ -26,7 +26,7 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/imgBtn_volver"
                     android:layout_width="19dp"
                     android:layout_height="112dp"
                     android:layout_weight="1"
