--- a/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
+++ b/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
@@ -92,7 +92,7 @@
                     android:text="θ:" />
 
                 <EditText
-                    android:id="@+id/editTextText8"
+                    android:id="@+id/txt_area"
                     android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -110,7 +110,7 @@
                     android:text="I:" />
 
                 <EditText
-                    android:id="@+id/editTextText9"
+                    android:id="@+id/txt_angulo"
                     android:layout_width="131dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -138,7 +138,7 @@
                     android:text="dl:" />
 
                 <EditText
-                    android:id="@+id/editTextText10"
+                    android:id="@+id/txt_campo"
                     android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -185,7 +185,7 @@
                     android:text="R:" />
 
                 <EditText
-                    android:id="@+id/editTextText10"
+                    android:id="@+id/txt_campo"
                     android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -214,7 +214,7 @@
                     android:text="¿Qué desea calcular?" />
 
                 <Spinner
-                    android:id="@+id/spinner2"
+                    android:id="@+id/cb"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
