--- a/MyApplication/app/src/main/res/layout/activity_caida_libre.xml
+++ b/MyApplication/app/src/main/res/layout/activity_caida_libre.xml
@@ -3,28 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".CaidaLibre">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="372dp"
-        android:layout_height="40dp"
+        android:layout_width="362dp"
+        android:layout_height="53dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/imgbtn_volver_cl"
+            android:layout_width="8dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_dialog" />
+            android:contentDescription="Volver"
+            app:srcCompat="@drawable/volver" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:layout_width="101dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Caida Libre"
@@ -41,13 +42,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="346dp"
-        android:layout_height="582dp"
+        android:layout_width="327dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/space">
 
         <TextView
             android:id="@+id/textView3"
@@ -58,9 +58,8 @@
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cropToPadding="false"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_height="128dp"
+            app:srcCompat="@drawable/formulas_cl" />
 
         <Space
             android:layout_width="match_parent"
@@ -91,7 +90,7 @@
         </LinearLayout>
 
         <Space
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="15dp" />
 
         <LinearLayout
@@ -121,7 +120,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="37dp" />
+            android:layout_height="24dp" />
 
         <TextView
             android:id="@+id/textView5"
@@ -149,5 +148,13 @@
             android:textSize="20sp" />
 
     </LinearLayout>
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="172dp"
+        android:layout_height="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
